fix spacing in content blocks;

--- a/web/app/themes/thecenter/assets/styles/pages/_home.scss
+++ b/web/app/themes/thecenter/assets/styles/pages/_home.scss
@@ -17,7 +17,7 @@
 .content-block {
   position: relative;
   overflow: visible;
-  min-height: 312px;
+  // min-height: 312px;
   margin-top: 54px;
   margin-right: -36px;
   padding: 0; 
