--- a/web/app/themes/thecenter/assets/styles/pages/_single-post.scss
+++ b/web/app/themes/thecenter/assets/styles/pages/_single-post.scss
@@ -72,6 +72,7 @@
     margin: 0; 
     margin-top: 84px;
     margin-bottom: 64px;
+    padding-bottom: 105px;
     @include media-md {
       margin: 0;
       margin-top: 120px;
